# xfemm

./: .gitignore  .hgignore  CHANGELOG.txt  README-LUA.txt  README.md  README.txt  release.sh  test_release.sh
cfemm/: CMakeLists.txt  Doxyfile  INSTALL-MESSAGE.txt  LICENSE-FEMM.txt  LICENSE-Lua.txt  LICENSE-triangle.txt  README-LUA.txt  REVIEW.md  apidoc.h  cfemm.workspace  run_tests.sh
cfemm/epproc/: CMakeLists.txt  CSPointVals.cpp  CSPointVals.h  epproc.cpp  epproc.h  main.cpp
cfemm/epproc/test/: CMakeLists.txt  test.out.check  test.res
cfemm/esolver/: CMakeLists.txt  esolver.cpp  esolver.h  main.cpp
cfemm/esolver/test/: CMakeLists.txt  test.fee
cfemm/femmcli/: CMakeLists.txt  FemmState.cpp  FemmState.h  LICENCE.txt  LuaBaseCommands.cpp  LuaBaseCommands.h  LuaCommonCommands.cpp  LuaCommonCommands.h  LuaElectrostaticsCommands.cpp  LuaElectrostaticsCommands.h  LuaHeatflowCommands.cpp  LuaHeatflowCommands.h  LuaMagneticsCommands.cpp  LuaMagneticsCommands.h  femmcli.cbp  main.cpp
cfemm/femmcli/debug/: init.lua
cfemm/femmcli/release/: license.txt
cfemm/femmcli/test/: 01_pureLua.lua  01_pureLua.lua.out.check  02_complex.lua  03_compatmode.lua  04_chdir.lua  05_trace.lua  05_trace.lua.out.check  06_femfile.lua  06_femfile.lua.out.check  06_femfile.result.ans.check  06_femfile.result.fem.check  07_matlib.lua  08_mathlib.lua  CMakeLists.txt  femmcli_TorqueBenchmark.fem  femmcli_TorqueBenchmark.lua  femmcli_antiperiodicBC_AGE_TorqueBenchmark.fem  femmcli_antiperiodicBC_AGE_TorqueBenchmark.lua  femmcli_antiperiodicBC_flux.fem  femmcli_antiperiodicBC_flux.lua  femmcli_antisymmetricBC_flux.lua  femmcli_chdir.lua  femmcli_compatmode.lua  femmcli_complex.lua  femmcli_complex.lua.out.check  femmcli_epproc.fee  femmcli_epproc.lua  femmcli_femfile.fem  femmcli_femfile.lua  femmcli_femfile.lua.out.check  femmcli_femfile.result.fem.check  femmcli_fpproc.lua  femmcli_hpproc.lua  femmcli_mathlib.lua  femmcli_matlib.lua  femmcli_matlib.result.fem.check  femmcli_pureLua.lua  femmcli_trace.lua  femmcli_trace.lua.out.check
cfemm/fmesher/: CMakeLists.txt  FemmeDoc.h  FemmeView.cpp  LICENCE.txt  fmesher.cbp  fmesher.cpp  fmesher.h  libfmesher.cbp  main.cpp  nosebl.cpp  nosebl.h  triangle.c  writepoly.cpp
cfemm/fmesher/test/: CMakeLists.txt  Temp.fem  fmesher.out.check
cfemm/fmesher/triangle/: triangle.c  triangle.h  triangle_version.h
cfemm/fpproc/: CMPointVals.cpp  CMPointVals.h  CMakeLists.txt  CPostProcMElement.cpp  CPostProcMElement.h  fpproc.cpp  fpproc.h  libfpproc.cbp  libfpproc.depend  main.cpp  makemask.cpp  problem.cpp  problem.h  test_fpproc.cbp
cfemm/fpproc/test/: Temp.ans
cfemm/fsolver/: CMakeLists.txt  LICENCE.txt  fsolver.cbp  fsolver.cpp  fsolver.h  harmonic2d.cpp  harmonicaxi.cpp  libfsolver.cbp  main.cpp  matprop.cpp  mmesh.h  static2d.cpp  staticaxi.cpp
cfemm/fsolver/test/: CMakeLists.txt  Temp.ans.check  Temp.edge  Temp.ele  Temp.fem  Temp.node  Temp.pbc  Temp.poly
cfemm/hpproc/: CHPointVals.cpp  CHPointVals.h  CMakeLists.txt  hpproc.cbp  hpproc.cpp  hpproc.h  hproblem.cpp  hproblem.h  main.cpp  test_hpproc.cbp  test_hpproc.depend
cfemm/hpproc/Test/: Temp1.anh
cfemm/hpproc/test/: CMakeLists.txt  Temp0.out.check  Temp1.out.check  hpproc-test.out.check
cfemm/hsolver/: CMakeLists.txt  cuthill.cpp  hmesh.h  hsolver.cbp  hsolver.cpp  hsolver.h  hspars.cpp  libhsolver.cbp  main.cpp  matprop.cpp
cfemm/hsolver/test/: CMakeLists.txt  Temp0.anh.check  Temp0.feh  Temp1.anh.check
cfemm/libfemm/: CAirGapElement.cpp  CAirGapElement.h  CArcSegment.cpp  CArcSegment.h  CBlockLabel.cpp  CBlockLabel.h  CBoundaryProp.cpp  CBoundaryProp.h  CCircuit.cpp  CCircuit.h  CCommonPoint.cpp  CCommonPoint.h  CElement.cpp  CElement.h  CMakeLists.txt  CMaterialProp.cpp  CMaterialProp.h  CMeshNode.cpp  CMeshNode.h  CNode.cpp  CNode.h  CPointProp.cpp  CPointProp.h  CPointVals.cpp  CPointVals.h  CQuadPoint.h  CSegment.cpp  CSegment.h  CliTools.cpp  CliTools.h  FemmProblem.cpp  FemmProblem.h  FemmReader.cpp  FemmReader.h  FemmState.cpp  FemmState.h  FemmStateBase.cpp  FemmStateBase.h  IntPoint.cpp  IntPoint.h  (+39 more)
cfemm/libfemm/liblua/: femmcomplex.cpp  femmcomplex.h  lbaselib.cpp  ldblib.cpp  liblua.cbp  liblua.cbp.mak  liolib.cpp  llex.h  llimits.h  lobject.cpp  lobject.h  lparser.cpp  lparser.h  lstate.cpp  lstate.h  lstring.cpp  lstring.h  lstrlib.cpp  ltable.cpp  lua.h  lundump.h
cfemm/ssolver/: CMakeLists.txt  main.cpp  ssolver.cpp  ssolver.h
pfemm/fmesher/: CMakeLists.txt  FemmeDoc.cpp  fmesher.cbp  fmesher.cbp.mak  fmesher.cpp  fmesher.depend  fmesher.h  intpoint.cpp  intpoint.h  libfmesher.cbp  libfmesher.cbp.mak  main.cpp  nosebl.cpp  nosebl.h  stdstring.h  triangle.c  triangle.h  writepoly.cpp
pfemm/fmesher/test/: split_seg_err_test.fem  triangle_test_command.txt
pfemm/fpproc/: CMakeLists.txt  FPProc.cbp  FPProc.cbp.mak  FPProc.depend  fpproc.cpp  fpproc.h  libfpproc.cbp  libfpproc.cbp.mak  libfpproc.depend  main.cpp  makemask.cpp  problem.cpp  problem.h  test_fpproc.depend
pfemm/fsolver/: CMakeLists.txt  cspars.cpp  cuthill.cpp  fsolver.cbp  fsolver.cbp.mak  fsolver.cpp  fsolver.depend  fsolver.h  fsolver.workspace  fullmatrix.cpp  fullmatrix.h  harmonic2d.cpp  harmonicaxi.cpp  libfsolver.cbp  libfsolver.cbp.mak  lua.h  main.cpp  matprop.cpp  mesh.h  mmesh.h  spars.cpp  spars.h  static2d.cpp  staticaxi.cpp  stdstring.h
pfemm/fsolver/femm_code/: Block_Integral_Code_From_femm.cpp  README.txt
pfemm/fsolver/liblua/: lapi.cpp  lapi.h  llex.h  llimits.h  lobject.cpp  lopcodes.h  lstate.cpp  lstrlib.cpp
pfemm/fsolver/test/: Temp.ele  Temp.node
pfemm/libfemm/: CMakeLists.txt  complex.cpp  complex.h  cspars.cpp  cuthill.cpp  femmcomplex.cpp  femmcomplex.h  fparse.cpp  fparse.h  fullmatrix.cpp  libfemm.cbp  libfemm.cbp.mak  libfemm.depend  libfemm.vcxproj  main.cpp  matprop.cpp  mesh.h  parse.cpp  parse.h  spars.cpp  spars.h
pfemm/libfemm/liblua/: lapi.cpp  lauxlib.h  lcode.cpp  lcode.h  lfunc.cpp  lfunc.h  lgc.cpp  lgc.h  liolib.cpp  llimits.h  lmathlib.cpp  lstring.cpp  ltable.h  ltests.cpp  ltm.h  lua.h  lualib.h  lvm.cpp  lvm.h  lzio.cpp  lzio.h
(+260 files in other folders)
